[tool.poetry]
name = "mmt"
version = "0.1.0"
description = ""
authors = ["briskdust <briskdust@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13.1"
torch = "^2.6.0"
tqdm = "^4.67.1"
numpy = "^2.2.2"
transformers = "^4.48.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

